--- a/index.html
+++ b/index.html
@@ -82,28 +82,169 @@
   </header>
 
   <section class="about">
+
     <div class="about__upper">
-      <h3 class="about__upper-title">
-        We create architectural designs
-      </h3>
+      <div class="container">
+        <h3 class="about__upper-title">
+          We create architectural designs
+        </h3>
+      </div>
     </div>
-    <div class="about__center">
-      <p class="about__center-text">
+    <div class="about__central">
+      <!-- <div class="container about__central-container"> -->
+      <p class="about__central-text">
         The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-        1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" are also reproduced in their accompanied by English 14
+        1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" are also reproduced in their accompanied by English
+        14
         translation by H. Rackham.
       </p>
-      <div class="about__center-img">
-
+      <div class="about__central-img">
       </div>
 
-      <h3 class="about__center-title">
+      <!-- <img src="images/main2.jpg" alt="house" class="about__central-img"> -->
+      <!-- </div> -->
+
+
+    </div>
+    <div class="about__lower-title-container container">
+      <h3 class="about__lower-title">
         Spatial Instruments
       </h3>
     </div>
+
     <div class="about__lower">
 
+
+      <div class="container about__lower-container">
+        <div class="about__lower-img">
+        </div>
+        <div class="about__lower-text-container">
+          <div class="about__lower-text">
+            To achieve maximum results, you need to set goals and move towards them. The best investment is investing in
+            yourself. Our team will help you.
+          </div>
+        </div>
+      </div>
     </div>
+
+  </section>
+
+  <section class="services">
+    <div class="services__left">
+      <h3 class="services__title">
+        SERVICES
+      </h3>
+    </div>
+    <div class="services__right">
+      <ul class="services__list">
+        <li class="services__list-item">
+          <div class="services__list-item-upper">
+            <h4 class="services__list-item-title">
+              ARCHITECTURE DESIGN
+            </h4>
+            <button class="services__list-item-btn">
+              <div class="services__list-item-btn-down-arrow">
+
+              </div>
+            </button>
+          </div>
+          <div class="services__list-item-lower">
+            <a href="#" class="services__list-item-link">
+              Explore
+            </a>
+            <p class="services__list-item-text">
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+            </p>
+          </div>
+        </li>
+        <li class="services__list-item">
+          <div class="services__list-item-upper">
+            <h4 class="services__list-item-title">
+              PLANNING
+            </h4>
+            <button class="services__list-item-btn">
+              <div class="services__list-item-btn-down-arrow">
+
+              </div>
+            </button>
+          </div>
+          <div class="services__list-item-lower">
+            <a href="#" class="services__list-item-link">
+              Explore
+            </a>
+            <p class="services__list-item-text">
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+            </p>
+          </div>
+        </li>
+        <li class="services__list-item">
+          <div class="services__list-item-upper">
+            <h4 class="services__list-item-title">
+              LANDSCAPE DESIGN
+            </h4>
+            <button class="services__list-item-btn">
+              <div class="services__list-item-btn-down-arrow">
+
+              </div>
+            </button>
+          </div>
+          <div class="services__list-item-lower">
+            <a href="#" class="services__list-item-link">
+              Explore
+            </a>
+            <p class="services__list-item-text">
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+            </p>
+          </div>
+        </li>
+        <li class="services__list-item">
+          <div class="services__list-item-upper">
+            <h4 class="services__list-item-title">
+              BRANDING
+            </h4>
+            <button class="services__list-item-btn">
+              <div class="services__list-item-btn-down-arrow">
+
+              </div>
+            </button>
+          </div>
+          <div class="services__list-item-lower">
+            <a href="#" class="services__list-item-link">
+              Explore
+            </a>
+            <p class="services__list-item-text">
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+            </p>
+          </div>
+        </li>
+        <li class="services__list-item">
+          <div class="services__list-item-upper">
+            <h4 class="services__list-item-title">
+              STYLE
+            </h4>
+            <button class="services__list-item-btn">
+              <div class="services__list-item-btn-down-arrow">
+
+              </div>
+            </button>
+          </div>
+          <div class="services__list-item-lower">
+            <a href="#" class="services__list-item-link">
+              Explore
+            </a>
+            <p class="services__list-item-text">
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+            </p>
+          </div>
+        </li>
+      </ul>
+    </div>
+
 
   </section>
 
