changed folder structure, added common style blocks, added new page about

--- a/about/about.html
+++ b/about/about.html
@@ -5,23 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Benhome</title>
+  <title>Benhome: about</title>
 
-  <link rel="stylesheet" href="libs/reset/reset.css">
-  <link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css">
-  <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/index.css">
-
-  <script src="libs/swiper/swiper-bundle.min.js" defer></script>
-  <script src="js/index.js" defer></script>
+  <link rel="stylesheet" href="../libs/reset/reset.css">
+  <link rel="stylesheet" href="../common/fonts.css">
+  <link rel="stylesheet" href="./css/about.css">
 </head>
 
 <body>
   <header class="header">
     <div class="header__upper">
       <a href="#" class="header__logo">
-        <img class="header__logo-benhome" src="images/benhome.png" alt="benhome">
-        <img class="header__logo-architecture" src="images/architecture.png" alt="architecture">
+        <img class="header__logo-benhome" src="../images/about/logo.png" alt="benhome">
       </a>
       <nav class="header__nav">
         <ul class="header__menu">
@@ -62,75 +57,66 @@
         </a>
       </div>
     </div>
-    <div class="header__center">
+    <div class="header__central">
       <h1 class="header__title">
-        <span class="header__title-start">
-          We know
+        The best way —
+        <span class="header__title-span">
+          your way
         </span>
-        <br>
-        design
-        <br>
-        well
       </h1>
     </div>
     <div class="header__lower">
-      <div class="header__play-btn">
-      </div>
-      <p class="header__promo-text">
-        The font blends perfectly with white backgrounds, making the design unique and presentable The font blends
-        perfectly with white backgrounds, making the design unique and presentable
-      </p>
+
     </div>
+
+
   </header>
-
-  <section class="about">
-
-    <div class="about__upper">
-      <div class="container">
-        <h3 class="about__upper-title">
-          We create architectural designs
-        </h3>
-      </div>
-    </div>
-    <div class="about__central">
-      <!-- <div class="container about__central-container"> -->
-      <p class="about__central-text">
-        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-        1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" are also reproduced in their accompanied by English
-        14
-        translation by H. Rackham.
-      </p>
-      <div class="about__central-img">
-      </div>
-
-      <!-- <img src="images/main2.jpg" alt="house" class="about__central-img"> -->
-      <!-- </div> -->
-
-
-    </div>
-    <div class="about__lower-title-container container">
-      <h3 class="about__lower-title">
-        Spatial Instruments
-      </h3>
-    </div>
-
-    <div class="about__lower">
-
-
-      <div class="container about__lower-container">
-        <div class="about__lower-img">
-        </div>
-        <div class="about__lower-text-container">
-          <div class="about__lower-text">
-            To achieve maximum results, you need to set goals and move towards them. The best investment is investing in
-            yourself. Our team will help you.
-          </div>
+  <section class="idea">
+    <div class="idea__upper">
+      <div class="idea__upper-left">
+        <h2 class="idea__title">
+          Our philosophy
+        </h2>
+        <div class="idea__text">
+          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+          1.10.32 and 1.10.33 from de Finibus Bonorum et Malorum" are also
         </div>
       </div>
+      <div class="idea__upper-right">
+        <video src="#" class="idea__video">
+
+        </video>
+      </div>
+    </div>
+    <div class="idea__lower container">
+      <div class="idea__lower-left">
+        <p class="idea__lower-number">
+          7
+        </p>
+        <h2 class="idea__lower-title">
+          Years Experience
+        </h2>
+        <p class="idea__lower-text">
+          de Finibus Bonorum et Malorum" are also reproduced in their accompanied by English 14 translation by H.
+          Rackham
+        </p>
+      </div>
+      <div class="idea__lower-right">
+        <p class="idea__lower-number">
+          20
+        </p>
+        <h2 class="idea__lower-title">
+          Projects done
+        </h2>
+        <p class="idea__lower-text">
+          de Finibus Bonorum et Malorum" are also reproduced in their accompanied by English 14 translation by H.
+          Rackham
+        </p>
+      </div>
+
     </div>
 
   </section>
-
   <section class="services">
     <div class="services__left">
       <h3 class="services__title">
@@ -249,61 +235,95 @@
 
   </section>
 
-  <section class="projects">
-
-    <div class="projects__upper container">
-      <h2 class="projects__title">
-        Projects.
+  <section class="team">
+    <div class="team__upper">
+      <h2 class="team__title">
+        Meet our team
       </h2>
     </div>
-
-    <div class="projects__lower">
-
-      <div class="swiper-container">
-        <div class="swiper-wrapper">
-
-          <div class="swiper-slide swiper-slide-one">
-            <div class="swiper-slide__upper">
-              <h3 class="swiper-slide__title">
-                HOUSE IN FOREST
-              </h3>
-              <div class="swiper-slide__category">
-                ARCHITECTURE
-              </div>
-            </div>
-            <div class="swiper-slide__lower">
-              <a class="swiper-slide__link-btn" href="#">
-
-              </a>
-              <div class="swiper-slide__text">
-                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum"  are also reproduced in their  accompanied by English 14 translation by H. Rackham.
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div>
-          <div class="swiper-slide">Slide 4</div>
-          <div class="swiper-slide">Slide 5</div>
-
+    <div class="team__lower">
+      <div class="team__person">
+        <h3 class="team__person-title">
+          Adam Raymond
+        </h3>
+        <p class="team__person-text">
+          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
+        </p>
+        <div class="team__person-socials">
+          <a href="#" class="team__person-socials-link team__person-socials-link--fb">
+          </a>
+          <a href="#" class="team__person-socials-link team__person-socials-link--tw">
+          </a>
+          <a href="#" class="team__person-socials-link team__person-socials-link--inst">
+          </a>
         </div>
-        <!-- <div class="swiper-pagination"></div> -->
-
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-
+      </div>
+      <div class="team__person">
+        <h3 class="team__person-title">
+          Adam Raymond
+        </h3>
+        <p class="team__person-text">
+          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
+        </p>
+        <div class="team__person-socials">
+          <a href="#" class="team__person-socials-link team__person-socials-link--fb">
+          </a>
+          <a href="#" class="team__person-socials-link team__person-socials-link--tw">
+          </a>
+          <a href="#" class="team__person-socials-link team__person-socials-link--inst">
+          </a>
+        </div>
+      </div>
+      <div class="team__person">
+        <h3 class="team__person-title">
+          Adam Raymond
+        </h3>
+        <p class="team__person-text">
+          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
+        </p>
+        <div class="team__person-socials">
+          <a href="#" class="team__person-socials-link team__person-socials-link--fb">
+          </a>
+          <a href="#" class="team__person-socials-link team__person-socials-link--tw">
+          </a>
+          <a href="#" class="team__person-socials-link team__person-socials-link--inst">
+          </a>
+        </div>
+      </div>
+      <div class="team__person">
+        <h3 class="team__person-title">
+          Adam Raymond
+        </h3>
+        <p class="team__person-text">
+          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+          1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
+        </p>
+        <div class="team__person-socials">
+          <a href="#" class="team__person-socials-link team__person-socials-link--fb">
+          </a>
+          <a href="#" class="team__person-socials-link team__person-socials-link--tw">
+          </a>
+          <a href="#" class="team__person-socials-link team__person-socials-link--inst">
+          </a>
+        </div>
       </div>
     </div>
-
-
   </section>
-
-
-
-
-
-
-
-
+  <section class="brands">
+    <div class="brands__container container">
+      <div class="brands__item brands__item--first">
+      </div>
+      <div class="brands__item brands__item--second">
+      </div>
+      <div class="brands__item brands__item--third">
+      </div>
+      <div class="brands__item brands__item--fourth">
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
